[package]
name = "genealogy-rust"
version = "0.1.0"
authors = ["daniel"]

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }

actix = "0.5"
actix-web = { git="https://github.com/actix/actix-web.git" }

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

futures = "0.1"
